# KL9-Architecture

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  ROADMAP.md  __init__.py  _conf_schema.json  adapter.py  conftest.py  kailejiu_graph  kailejiu_learner  main.py  metadata.yaml  pyproject.toml  quickstart.py
archive/: README.md  STRUCTURE_HEALTH_v1.1.0.md
core/: README.md  __init__.py  n9r20_adaptive_router.py  n9r20_compression_core.py  n9r20_concept_conflict.py  n9r20_config.py  n9r20_dual_reasoner.py  n9r20_llm_compressor.py  n9r20_memory_learner.py  n9r20_production_logger.py  n9r20_skillbook_compat.py  n9r20_structures.py  n9r20_user_config.py  n9r20_utils.py  version.py
dasheng-qixin-lun/: SKILL.md
data/: cmd_config.json
docs/: ARCHITECTURE.md  ASTRBOT_POST.md  CHANGELOG.md  CONVERSATION_LOG_2026-05-06.md  DIRECTORY_HIERARCHY_GUIDE.md  GUIDE.md  MIGRATION_GUIDE.md  README.md  REFACTOR_REPORT_2026-05-06.md  RELEASE_v1.5.0.md  SKILLBOOK_v2.md  STRUCTURE_HEALTH_REPORT.md  STRUCTURE_REFACTOR_REPORT.md
examples/: README.md  brock_on_money.skillbook.json  quickstart.py
find-skills/: SKILL.md
humanizer-zh/: SKILL.md
humanizer-zh.archived/: README.md  SKILL.md
kailejiu-core/: SKILL.md  __init__.py
kailejiu-graph/: SKILL.md
kailejiu-learner/: SKILL.md
kailejiu-memory/: SKILL.md  __init__.py
kailejiu-orchestrator/: SKILL.md  __init__.py
kailejiu-reasoner/: __init__.py
kailejiu-research/: __init__.py
kailejiu-shared/: __init__.py
kailejiu-soul/: __init__.py
kl9/: __init__.py  astrbot.py  models.py  system.py
(+237 files in other folders)
