[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n9r21"
version = "2.1.0"
description = "KL9 9R-2.1 — Recursive Fold Cognitive Protocol"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
